fixing some mobile styles to avoid overflow on header

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -166,7 +166,7 @@ body
 
   .columns.seven.mobile-two.center img
       margin-top 10px
-      
+
   .persons
     .person
       height: 360px;
@@ -178,14 +178,38 @@ body
         &:hover
           filter(contrast(200%))
 
+.video-container 
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+
+
+.video-container iframe,
+.video-container object,
+.video-container embed 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
 
 @media(max-width: 767px)
 
-  #index
-    .meetings
-      .join-us
-        top: 430px;
-        background: rgba(255,255,255,.8);
+
+  .meetings
+    .join-us
+      top: 430px;
+      background: rgba(255,255,255,.8);
+  .header
+      h1
+        font-size 40px
+        line-height 50px
+      .description
+        font-size 15px
+
+  .columns
+    padding 0 20px
     
 
   .persons
